[gd_scene load_steps=21 format=3 uid="uid://4xjb5rm8sljr"]

[ext_resource type="Texture2D" uid="uid://5mtk45565eus" path="res://assets/sprites/entities/argus/Argus_Jump.png" id="1_4tjql"]
[ext_resource type="Script" path="res://scenes/entities/argus.gd" id="1_edgr4"]
[ext_resource type="Texture2D" uid="uid://blp2apxwmmkts" path="res://assets/sprites/entities/argus/Argus_idle.png" id="1_ikum3"]
[ext_resource type="Texture2D" uid="uid://85gxbayfxkd" path="res://assets/sprites/entities/argus/Argus_attack.png" id="3_21d2n"]
[ext_resource type="Script" path="res://scenes/entities/damageable.gd" id="4_v4xmb"]
[ext_resource type="PackedScene" uid="uid://cr66co3nuvq5j" path="res://scenes/laser_eyes.tscn" id="5_k8ujg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jxun7"]
size = Vector2(767.5, 691)

[sub_resource type="Animation" id="Animation_3nswp"]
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_uny5v"]
resource_name = "attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_21d2n")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_07i6y"]
resource_name = "idle"
length = 2.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_ikum3")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 0, 1, 2]
}

[sub_resource type="Animation" id="Animation_8g7w2"]
resource_name = "jump"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_4tjql")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_chaui"]
_data = {
"RESET": SubResource("Animation_3nswp"),
"attack": SubResource("Animation_uny5v"),
"idle": SubResource("Animation_07i6y"),
"jump": SubResource("Animation_8g7w2")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_020t2"]
animation = &"idle"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_bn3of"]
blend_point_0/node = SubResource("AnimationNodeAnimation_020t2")
blend_point_0/pos = 0.0
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vvq0x"]
animation = &"jump"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_bwx7x"]
blend_point_0/node = SubResource("AnimationNodeAnimation_vvq0x")
blend_point_0/pos = 0.0
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_y6h44"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cq5ni"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wyh7q"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_t6pef"]
states/Start/position = Vector2(205, 93)
states/idle/node = SubResource("AnimationNodeBlendSpace1D_bn3of")
states/idle/position = Vector2(409.913, 93)
states/jump/node = SubResource("AnimationNodeBlendSpace1D_bwx7x")
states/jump/position = Vector2(602.913, 93)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_y6h44"), "idle", "jump", SubResource("AnimationNodeStateMachineTransition_cq5ni"), "jump", "idle", SubResource("AnimationNodeStateMachineTransition_wyh7q")]
graph_offset = Vector2(93.9129, 0)

[node name="argus" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 2
script = ExtResource("1_edgr4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.25, 58.5)
shape = SubResource("RectangleShape2D_jxun7")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_4tjql")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_chaui")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_chaui")
}
tree_root = SubResource("AnimationNodeStateMachine_t6pef")
anim_player = NodePath("../AnimationPlayer")
parameters/idle/blend_position = 0
parameters/jump/blend_position = 0

[node name="Damageable" type="Node" parent="."]
script = ExtResource("4_v4xmb")

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(-210, 155)

[node name="laser_container" type="Node2D" parent="."]
position = Vector2(-689, 126)

[node name="laser_eyes" parent="laser_container" instance=ExtResource("5_k8ujg")]
position = Vector2(485, 40)
